; ModuleID = '/home/carl/AnghaBench/lede/package/kernel/lantiq/ltq-atm/src/extr_ltq_atm.c_ifx_atm_version.c'
source_filename = "/home/carl/AnghaBench/lede/package/kernel/lantiq/ltq-atm/src/extr_ltq_atm.c_ifx_atm_version.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ltq_atm_ops = type { i32 (i32*, i32*)* }

@.str = private unnamed_addr constant [12 x i8] c"ATM%d.%d.%d\00", align 1
@IFX_ATM_VER_MAJOR = common dso_local global i32 0, align 4
@IFX_ATM_VER_MID = common dso_local global i32 0, align 4
@IFX_ATM_VER_MINOR = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [37 x i8] c"    ATM (A1) firmware version %d.%d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ltq_atm_ops*, i8*)* @ifx_atm_version to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ifx_atm_version(%struct.ltq_atm_ops* %0, i8* %1) #0 {
  %3 = alloca %struct.ltq_atm_ops*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.ltq_atm_ops* %0, %struct.ltq_atm_ops** %3, align 8
  store i8* %1, i8** %4, align 8
  store i32 0, i32* %5, align 4
  %8 = load %struct.ltq_atm_ops*, %struct.ltq_atm_ops** %3, align 8
  %9 = getelementptr inbounds %struct.ltq_atm_ops, %struct.ltq_atm_ops* %8, i32 0, i32 0
  %10 = load i32 (i32*, i32*)*, i32 (i32*, i32*)** %9, align 8
  %11 = call i32 %10(i32* %6, i32* %7)
  %12 = load i8*, i8** %4, align 8
  %13 = load i32, i32* %5, align 4
  %14 = sext i32 %13 to i64
  %15 = getelementptr inbounds i8, i8* %12, i64 %14
  %16 = load i32, i32* @IFX_ATM_VER_MAJOR, align 4
  %17 = load i32, i32* @IFX_ATM_VER_MID, align 4
  %18 = load i32, i32* @IFX_ATM_VER_MINOR, align 4
  %19 = call i64 (i8*, i8*, i32, i32, ...) @sprintf(i8* %15, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i32 %16, i32 %17, i32 %18)
  %20 = load i32, i32* %5, align 4
  %21 = sext i32 %20 to i64
  %22 = add nsw i64 %21, %19
  %23 = trunc i64 %22 to i32
  store i32 %23, i32* %5, align 4
  %24 = load i8*, i8** %4, align 8
  %25 = load i32, i32* %5, align 4
  %26 = sext i32 %25 to i64
  %27 = getelementptr inbounds i8, i8* %24, i64 %26
  %28 = load i32, i32* %6, align 4
  %29 = load i32, i32* %7, align 4
  %30 = call i64 (i8*, i8*, i32, i32, ...) @sprintf(i8* %27, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str.1, i64 0, i64 0), i32 %28, i32 %29)
  %31 = load i32, i32* %5, align 4
  %32 = sext i32 %31 to i64
  %33 = add nsw i64 %32, %30
  %34 = trunc i64 %33 to i32
  store i32 %34, i32* %5, align 4
  %35 = load i32, i32* %5, align 4
  ret i32 %35
}

declare dso_local i64 @sprintf(i8*, i8*, i32, i32, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
